--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
       </section>
 
     </nav>
-    <nav>
-
+    <nav id="navbar2">
+      <ul>
+        <li class="navbarButton1"><i class="fa-solid fa-bars"></i> All</li>
+        <li class="navbarButton1">Today's Deals</li>
+        <li class="navbarButton1">Customer Service</li>
+        <li class="navbarButton1">Registry</li>
+        <li class="navbarButton1">Gift Cards</li>
+        <li class="navbarButton1">Sell</li>
+      </ul>
     </nav>
     <nav>
 
