--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       </section>
 
     </nav>
+
     <nav id="navbar2">
       <ul>
         <li class="navbarButton1"><i class="fa-solid fa-bars"></i> All</li>
@@ -75,13 +76,65 @@
         <li class="navbarButton1">Sell</li>
       </ul>
     </nav>
-    <nav>
 
+    <nav id="navbar3">
+      <ul>
+        <li class="navbarButton2">Toys & Games</li>
+        <li class="navbarButton2">Kids Gift Guide</li>
+        <li class="navbarButton2">Shop Toys by Character</li>
+        <li class="navbarButton2">Shop Best Selling Toys</li>
+        <li class="navbarButton2">Shop Newly Released Toys</li>
+        <li class="navbarButton2">Shop Amazon Exclusive Toys</li>
+        <li class="navbarButton2">Shop Toy Deals</li>
+        <li class="navbarButton2">Create a Gift List</li>
+      </ul>
     </nav>
 
   </header>
 
   <main>
+
+    <p>‹ <a href="#">Back to results</a></p>
+
+    <section class="grid">
+      <section id="productDisplaySection" class="item">
+        <ul>
+          <li>
+            <img src="./assets/img/product-imgs/01.jpg" alt="">
+          </li>
+          <li>
+            <img src="./assets/img/product-imgs/02.jpg" alt="">
+          </li>
+          <li>
+            <img src="./assets/img/product-imgs/03.jpg" alt="">
+          </li>
+          <li>
+            <img src="./assets/img/product-imgs/04.jpg" alt="">
+          </li>
+          <li>
+            <img src="./assets/img/product-imgs/05.jpg" alt="">
+          </li>
+          <li>
+            <img src="./assets/img/product-imgs/06.jpg" alt="">
+          </li>
+        </ul>
+        
+        <section id="currentImg">
+          <img  src="./assets/img/product-imgs/01-big.jpg" alt="">
+          <p>
+            Roll over image to zoom in
+          </p>
+        </section>
+
+      </section>
+      <section class="item">
+
+      </section>
+      <section class="item">
+
+      </section>
+    </section>
+
   </main>
 </body>
 
