working on description and pricint sections

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <main>
 
-    <p>‹ <a href="#">Back to results</a></p>
+    <p id="resultsLink">‹ <a href="#">Back to results</a></p>
 
     <section class="grid">
       <section id="productDisplaySection" class="item">
@@ -127,11 +127,72 @@
         </section>
 
       </section>
-      <section class="item">
+
+      <section id="productDescriptionSection" class="item">
+        <h2>Pokemon Scarlet & Violet 3 Obsidian Flames Elite Trainer Box </h2>
+
+        <p><a href="#">Brand: Pokemon</a></p>
+
+        <section id="ratingsBar" class="flexRow">
+          <p class="blackText">4.1</p>
+          <img id="ratingStars" src="./assets/img/icons/4stars.png" alt=""> <i class="fa-solid fa-angle-down"></i>
+          <p> <a href="#">301 ratings</a> &nbsp; | &nbsp; <a href="#">3 answered questions</a> </p>
+        </section>
+
+        <section class="flexRow">
+          <section id="amznChoice"><p><span class="whiteText">Amazon's</span> <span class="orangeText">Choice</span></p></section>
+          <p>for "<a href="">Pokemon</a>"</p>
+        </section>
+
+        <p class="smallText">
+          10K+ bought in past month  |  70K+ viewed in past month
+        </p>
+
+        <hr>
+
+        <h2><span class="discount">-33%</span> <span class="superscript">$</span>36<span class="superscript">95</span></h2>
+
+        <p class="greyText smallText">List Price: <span class="oldPrice">&nbsp;$54.99&nbsp;</span> <i class="fa-solid fa-circle-info hoverableIcon"></i></p>
+
+        <p class="greyText">$25.38 Shipping & Import Fees Deposit to South Africa <a href="">Details</a> <i class="fa-solid fa-angle-down"></i></p>
+
+        <p>Available at a lower price from <a href="">other sellers</a> that may not offer free Prime shipping. </p>
+
+        <table>
+          <tr>
+            <td>Brand</td>
+            <td>Pokemon</td>
+          </tr>
+          <tr>
+            <td>Grade Rating</td>
+            <td>Ungraded</td>
+          </tr>
+          <tr>
+            <td>Graded By</td>
+            <td>TCG</td>
+          </tr>
+          <tr>
+            <td>Unit Count</td>
+            <td>1.0 Count</td>
+          </tr>
+          <tr>
+            <td>Theme</td>
+            <td>Anime</td>
+          </tr>
+        </table>
+
+        <hr>
 
       </section>
-      <section class="item">
 
+      <section id="productPricingSection" class="item">
+        <section class="card">
+
+          <h2><span class="superscript">$</span>36<span class="superscript">95</span></h2>
+
+          <p class="greyText">$25.38 Shipping & Import Fees Deposit to South Africa <a href="#">Details</a><br><i class="fa-solid fa-angle-down"></i></p>
+
+        </section>
       </section>
     </section>
 
