done important stuff

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             <img src="./assets/img/product-imgs/06.jpg" alt="">
           </li>
         </ul>
-        
+
         <section id="currentImg">
-          <img  src="./assets/img/product-imgs/01-big.jpg" alt="">
+          <img src="./assets/img/product-imgs/01-big.jpg" alt="">
           <p>
             Roll over image to zoom in
           </p>
@@ -140,21 +140,26 @@
         </section>
 
         <section class="flexRow">
-          <section id="amznChoice"><p><span class="whiteText">Amazon's</span> <span class="orangeText">Choice</span></p></section>
+          <section id="amznChoice">
+            <p><span class="whiteText">Amazon's</span> <span class="orangeText">Choice</span></p>
+          </section>
           <p>for "<a href="">Pokemon</a>"</p>
         </section>
 
         <p class="smallText">
-          10K+ bought in past month  |  70K+ viewed in past month
+          10K+ bought in past month | 70K+ viewed in past month
         </p>
 
         <hr>
 
-        <h2><span class="discount">-33%</span> <span class="superscript">$</span>36<span class="superscript">95</span></h2>
+        <h2><span class="discount">-33%</span> <span class="superscript">$</span>36<span class="superscript">95</span>
+        </h2>
 
-        <p class="greyText smallText">List Price: <span class="oldPrice">&nbsp;$54.99&nbsp;</span> <i class="fa-solid fa-circle-info hoverableIcon"></i></p>
+        <p class="greyText smallText">List Price: <span class="oldPrice">&nbsp;$54.99&nbsp;</span> <i
+            class="fa-solid fa-circle-info hoverableIcon"></i></p>
 
-        <p class="greyText">$25.38 Shipping & Import Fees Deposit to South Africa <a href="">Details</a> <i class="fa-solid fa-angle-down"></i></p>
+        <p class="greyText">$25.38 Shipping & Import Fees Deposit to South Africa <a href="">Details</a> <i
+            class="fa-solid fa-angle-down"></i></p>
 
         <p>Available at a lower price from <a href="">other sellers</a> that may not offer free Prime shipping. </p>
 
@@ -190,7 +195,63 @@
 
           <h2><span class="superscript">$</span>36<span class="superscript">95</span></h2>
 
-          <p class="greyText">$25.38 Shipping & Import Fees Deposit to South Africa <a href="#">Details</a><br><i class="fa-solid fa-angle-down"></i></p>
+          <p class="greyText">$25.38 Shipping & Import Fees Deposit to South Africa <a href="#">Details</a><br><i
+              class="fa-solid fa-angle-down"></i></p>
+
+          <p>
+            Delivery <span class="importantDates">September 27 - October 10</span>
+          </p>
+          <p>
+            Or fastest delivery <span class="importantDates">September 20 - October 2</span>
+          </p>
+
+          <section class="flexRow">
+            <img src="./assets/img/icons/map-pin.svg" alt="location icon"><p><a href="">Deliver to South Africa</a></p>
+          </section>
+
+          <h3 class="greenText">In Stock</h3>
+
+          <form action="">
+            <select name="quantity" id="cars">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+            </select>
+
+            <button id="btn1" type="button">Add to Cart</button>
+            <button id="btn2" type="button">Buy Now</button>
+
+            <table>
+              <tr>
+                <td>Payment</td>
+                <td><a href="#">Secure transaction</a></td>
+              </tr>
+              <tr>
+                <td>Ships from</td>
+                <td>Amazon.com</td>
+              </tr>
+              <tr>
+                <td>Sort By</td>
+                <td>Amazon.com</td>
+              </tr>
+              <tr>
+                <td>Returns</td>
+                <td><a href="#">Elgible for Return, Refund or Replacement within 30 days of reciept</a></td>
+              </tr>
+            </table>
+
+            <label for="giftReciept">
+              <input type="checkbox" name="giftReciept" id="" value="hello">
+              &nbsp;Add a gift receipt for easy returns
+            </label>
+            
+            <hr>
+
+            <p id="addToListBtn">Add to List</p>
+
+          </form>
+
+
 
         </section>
       </section>
