--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Amazon.com</title>
+  <title>Amazon.com: Pokemon Scarlet & Violet 3 Obsidian Flames Elite Trainer Box</title>
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
   <script src="https://kit.fontawesome.com/857ffcdc80.js" crossorigin="anonymous"></script>
 </head>
 
@@ -188,6 +189,21 @@
 
         <hr>
 
+        <h3>About this item</h3>
+        <ul>
+          <li>9 Pokémon TCG: Scarlet & Violet—Obsidian Flames booster packs </li>
+          <li>1 full-art foil promo card featuring Charmander</li>
+          <li>65 card sleeves featuring Charmander </li>
+          <li>45 Pokémon TCG Energy cards</li>
+          <li>A player's guide to the Scarlet & Violet—Obsidian Flames expansion </li>
+          <li>6 damage-counter dice </li>
+          <li>1 competition-legal coin-flip die</li>
+        </ul>
+
+        <hr>
+
+
+
       </section>
 
       <section id="productPricingSection" class="item">
@@ -241,7 +257,7 @@
             </table>
 
             <label for="giftReciept">
-              <input type="checkbox" name="giftReciept" id="" value="hello">
+              <input type="checkbox" name="giftReciept" id="">
               &nbsp;Add a gift receipt for easy returns
             </label>
             
@@ -250,10 +266,12 @@
             <p id="addToListBtn">Add to List</p>
 
           </form>
-
-
-
         </section>
+
+        <section id="new22Card" class="flexRow card hoverCard">
+          <p>New (22) from <span class="superscript2">$</span>36<span class="superscript2">95</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ></p>
+        </section>
+
       </section>
     </section>
 
